# mssql_tiberius_schema_parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.toml  structs.proto  structs.rs
src/: main.rs
src/helpers/: args_parser.rs  auth_handler.rs  common.rs  config.rs  get_database_tables.rs  get_table_schema.rs  mod.rs  proto_file_writer.rs  rs_file_writer.rs  signal_file_writer.rs  strucks.rs  structs.rs  win_auth.rs
src/helpers/traits/: mod.rs  select_parser.rs
