[package]
name = "mssql_tiberius_schema_parser"
version = "0.3.13"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Generates the schema of all tables in msql as a structure."
homepage = "https://github.com/rabbitson87/mssql_tiberius_schema_parser"
repository = "https://github.com/rabbitson87/mssql_tiberius_schema_parser"
documentation = "https://github.com/rabbitson87/mssql_tiberius_schema_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
gethostname = "0.5.0"
tiberius = { version = "0.12.3", features = [
    "winauth",
    "chrono",
    "tds73",
    "sql-browser-tokio",
] }
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
chrono = { version = "0.4.38", features = ["serde"] }

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
