[package]
name = "mssql_tiberius_schema_parser"
version = "0.5.1"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Generates the schema of all tables in msql as a structure."
homepage = "https://github.com/rabbitson87/mssql_tiberius_schema_parser"
repository = "https://github.com/rabbitson87/mssql_tiberius_schema_parser"
documentation = "https://github.com/rabbitson87/mssql_tiberius_schema_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
gethostname = "1.0.1"
tiberius = { version = "0.12.3", features = [
    "winauth",
    "chrono",
    "tds73",
    "sql-browser-tokio",
] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
chrono = { version = "0.4.40", features = ["serde"] }
toml = "0.8.20"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
